2008-09-18  Peter Kasting  <pkasting@google.com>

Reviewed by hyatt.  Landed by eseidel.

        https://bugs.webkit.org/show_bug.cgi?id=20745
        Animated GIFs do not animate properly with (at least) CG.

        * WebCore\platform\graphics\BitmapImage.cpp:
        * WebCore\platform\graphics\BitmapImage.h:
        * WebCore\platform\graphics\cairo\ImageCairo.cpp:
        * WebCore\platform\graphics\cg\ImageCG.cpp:
        * WebCore\platform\graphics\qt\ImageQt.cpp:
        * WebCore\platform\graphics\wx\ImageWx.cpp:


Canonical link: https://commits.webkit.org/28907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36628 268f45cc-cd09-0410-ab3c-d52691b4dbfc