WebCore/platform/graphics/BitmapImage.h
@@ -66,6 +66,7 @@ template <typename T> class Timer;
 struct FrameData : Noncopyable {
     FrameData()
         : m_frame(0)
+        , m_isComplete(false)
         , m_duration(0)
         , m_hasAlpha(true) 
     {
@@ -79,6 +80,7 @@ struct FrameData : Noncopyable {
     void clear();
 
     NativeImagePtr m_frame;
+    bool m_isComplete;
     float m_duration;
     bool m_hasAlpha;
 };
@@ -150,6 +152,7 @@ protected:
     size_t currentFrame() const { return m_currentFrame; }
     size_t frameCount();
     NativeImagePtr frameAtIndex(size_t);
+    bool frameIsCompleteAtIndex(size_t);
     float frameDurationAtIndex(size_t);
     bool frameHasAlphaAtIndex(size_t); 
 
