WebCore/platform/graphics/wx/ImageWx.cpp
@@ -57,6 +57,7 @@ void FrameData::clear()
     if (m_frame) {
         delete m_frame;
         m_frame = 0;
+        m_isComplete = false;
         m_duration = 0.;
         m_hasAlpha = true;
     }
